CP-59 fix: fix the margin spacing on the banner top

--- a/src/less/community/hackathon2020.less
+++ b/src/less/community/hackathon2020.less
@@ -68,12 +68,12 @@
       color: @mainColor;
 
       &:hover {
-        background-color: #26DD98;
+        background-color: #26dd98;
       }
     }
 
     &:hover {
-      background-color: #2323DB;
+      background-color: #2323db;
     }
   }
 
@@ -91,7 +91,8 @@
     width: 100%;
     height: 10em;
     padding: 3em;
-    background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
+    background: center / cover no-repeat
+      url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
 
     .title {
       color: #fff;
@@ -109,7 +110,8 @@
       width: 16em;
       top: 1em;
       right: 3em;
-      background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/modal-header-inner.svg');
+      background: center / contain no-repeat
+        url('https://download.pingcap.com/images/community/hackathon2020/modal-header-inner.svg');
     }
   }
 
@@ -167,7 +169,8 @@
         width: 1.5em;
         height: 1.5em;
         border-radius: 50%;
-        background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/spot.svg');
+        background: center / cover no-repeat
+          url('https://download.pingcap.com/images/community/hackathon2020/spot.svg');
       }
     }
 
@@ -230,20 +233,21 @@
 }
 
 .hacking-cam2021__banner {
-  background: url(https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner-new.png) no-repeat;
+  background: url(https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner-new.png)
+    no-repeat;
   padding-top: 28%;
   position: relative;
   width: 100%;
   height: 0;
   background-size: cover !important;
   background-position: center !important;
-  margin-top: 2rem;
 }
 
 .hackathon2020__banner {
   width: 100%;
   height: 0;
-  background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
+  background: center / cover no-repeat
+    url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
   margin-top: @headerHeight;
   padding: 30em 1em 0 1em;
 
@@ -252,7 +256,8 @@
   }
 
   .hacking-camp {
-    background: center / contain no-repeat url('https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner.png');
+    background: center / contain no-repeat
+      url('https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner.png');
   }
 
   .banner__inner {
@@ -261,7 +266,8 @@
     left: 0;
     width: 48em;
     height: 16em;
-    background: left / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/banner-inner.svg');
+    background: left / contain no-repeat
+      url('https://download.pingcap.com/images/community/hackathon2020/banner-inner.svg');
   }
 
   .banner__buttons {
@@ -301,7 +307,7 @@
     }
 
     &:hover {
-      color: #4444FD;
+      color: #4444fd;
     }
   }
 
@@ -315,7 +321,8 @@
 
 .hackathon2020__section-about {
   .container {
-    background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/infinite-grey.svg');
+    background: center / contain no-repeat
+      url('https://download.pingcap.com/images/community/hackathon2020/infinite-grey.svg');
   }
 
   .image-container {
@@ -359,7 +366,8 @@
   .highlight__title {
     height: 3em;
     line-height: 3em;
-    background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/infinite-blue.svg');
+    background: center / contain no-repeat
+      url('https://download.pingcap.com/images/community/hackathon2020/infinite-blue.svg');
     font-size: 1.25em;
     color: @secondaryGreen;
   }
@@ -389,7 +397,7 @@
     width: 250px;
     height: 335px;
     position: relative;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.05),
       0 0 0 1px rgba(10, 10, 10, 0.02);
 
@@ -407,7 +415,7 @@
 
   .team-info {
     text-align: center;
-    color: #1A1A24;
+    color: #1a1a24;
     margin-top: 18px;
 
     p {
@@ -453,8 +461,8 @@
 
     .GitHub-repo {
       position: relative;
-      background-color: #F7F8F9;
-      color: #4444FD;
+      background-color: #f7f8f9;
+      color: #4444fd;
       border: none;
       padding: 10px;
       border-radius: 4px;
@@ -462,7 +470,7 @@
       cursor: pointer;
 
       &:hover {
-        background-color: #4444FD;
+        background-color: #4444fd;
         color: white;
       }
     }
@@ -500,9 +508,9 @@
   }
 
   .more-project-btn {
-    border: 1px solid #0D309E;
+    border: 1px solid #0d309e;
     border-radius: 30px;
-    color: #0D309E;
+    color: #0d309e;
     background-color: white;
     padding: 15px 25px;
     font-size: 16px;
@@ -510,7 +518,7 @@
     cursor: pointer;
 
     &:hover {
-      background-color: #0D309E;
+      background-color: #0d309e;
       color: white;
     }
   }
@@ -597,7 +605,8 @@
   margin: 1em 1.5em;
   padding: 2em 3em;
   border-radius: 10px;
-  background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
+  background: center / cover no-repeat
+    url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
   color: #fff;
 
   .btn {
@@ -622,7 +631,8 @@
 .schedule__title {
   height: 4em;
   line-height: 2em;
-  background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/infinite-dark-blue.svg');
+  background: center / contain no-repeat
+    url('https://download.pingcap.com/images/community/hackathon2020/infinite-dark-blue.svg');
   color: @secondaryGreen;
 
   .name {
@@ -636,7 +646,7 @@
 
 .prize-container {
   justify-content: center;
-  padding: 1em .75em !important;
+  padding: 1em 0.75em !important;
 }
 
 .award-card {
@@ -989,7 +999,8 @@
       left: 2em;
       width: 12em;
       height: 12em;
-      background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/printing-wormhole.svg');
+      background: center / contain no-repeat
+        url('https://download.pingcap.com/images/community/hackathon2020/printing-wormhole.svg');
     }
 
     &::after {
@@ -999,16 +1010,19 @@
       right: 2em;
       width: 12em;
       height: 12em;
-      background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/printing-ripple.svg');
+      background: center / contain no-repeat
+        url('https://download.pingcap.com/images/community/hackathon2020/printing-ripple.svg');
     }
 
     &.hackathon2020__section-faq {
       &::before {
-        background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/printing-wormhole-blue.svg');
+        background: center / contain no-repeat
+          url('https://download.pingcap.com/images/community/hackathon2020/printing-wormhole-blue.svg');
       }
 
       &::after {
-        background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/printing-ripple-blue.svg');
+        background: center / contain no-repeat
+          url('https://download.pingcap.com/images/community/hackathon2020/printing-ripple-blue.svg');
       }
     }
   }
@@ -1129,9 +1143,9 @@
 
 @media (max-width: 428px) {
   .hacking-cam2021__banner {
-    background: url(https://download.pingcap.com/images/community/activities/home-tidb-hacking-camp-2021-carousel.png) no-repeat;
+    background: url(https://download.pingcap.com/images/community/activities/home-tidb-hacking-camp-2021-carousel.png)
+      no-repeat;
     padding-top: 68%;
-    margin-top: 3rem;
   }
 
   .hackathon2020 .modal__header {
