--- a/src/less/community/hacking-camp-2021s2.less
+++ b/src/less/community/hacking-camp-2021s2.less
@@ -243,7 +243,6 @@
   height: 0;
   background-size: cover !important;
   background-position: center !important;
-  margin-top: 2rem;
 }
 
 .hackathon2020__banner {
@@ -342,7 +341,8 @@
     width: 296px;
     height: 333px;
     margin: 30px 10px;
-    background: url('/archived/images/community/hacking-camp-2021-s2/card.svg') no-repeat;
+    background: url('/archived/images/community/hacking-camp-2021-s2/card.svg')
+      no-repeat;
     background-size: cover;
 
     h3,
@@ -1033,7 +1033,6 @@
     background: url('/archived/images/community/hacking-camp-2021-s2/mobile-banner.svg')
       no-repeat;
     padding-top: 68%;
-    margin-top: 3rem;
   }
 
   .hackathon2020 .modal__header {
